fixing stretched and overflowing images

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,9 +183,10 @@ nav h1 a {
 #restaurants-list .restaurant-img {
   background-color: #ccc;
  /* display: block;*/
-//* margin: 0; */
-/*  max-width: 60%;*/
-  /*min-height: 248px;*/
+ /* margin: 0; */
+  object-fit: cover;
+  max-width:  60%;
+
   min-width: 100%;
   justify-content: center;
 
@@ -310,7 +311,12 @@ display:flex;
 flex-wrap:wrap;
   padding-bottom:2%;
 }
+.restaurant-img {
+max-width:100%;
+max-height:100%;
+object-fit: cover;
 
+}
 #restaurant-address {
   font-size: 4vw;
   margin: 10px 0px;
